--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -2,5 +2,5 @@
 http-socket = :$(PORT)
 master = true
 die-on-term = true
-module = run:app
-memoryreport = true
+module = app:app
+memory-report = true
